--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "library-management-system",
+  "name": "simple-task-manager",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
     "typescript": "^5.8.3"
-  },
-  "description": ""
+  }
 }
